<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!-- 欢迎区 -->
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/title_blue"
        android:scaleType="fitXY"/>

    <LinearLayout 
        android:id="@+id/ll_loading_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="visible">
        
        <ImageView
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/loading_logo" />
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_logo"
            android:textColor="@color/item_white"
            android:textSize="20sp"/>

        
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp">
            
            <ImageView
                android:layout_width="2800dp"
                android:layout_height="30dp"
                android:src="@drawable/loading_copyright" 
                android:layout_alignParentBottom="true"/>
            
        </RelativeLayout>
        
        
    </LinearLayout>
    
    <!-- 登录区 -->
    <LinearLayout 
        android:id="@+id/ll_loginlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="120dp"
        android:visibility="invisible">
        
        <RelativeLayout 
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            
            <ImageView
                android:id="@+id/iv_login_logo"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/login_logo" />
            
        </RelativeLayout>
        
        <FrameLayout 
            android:id="@+id/fl_login_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            
            <EditText
                android:id="@+id/et_login_user"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@drawable/login_editor"
                android:hint="@string/et_login_user"
                android:paddingLeft="15dp"/>
            
        </FrameLayout>
        
        <FrameLayout 
            android:id="@+id/fl_login_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            
            <EditText
                android:id="@+id/et_login_pin"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@drawable/login_editor"
                android:hint="@string/et_login_pin"
                android:password="true"
                android:paddingLeft="15dp"/>
          
        </FrameLayout>
        
        
        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/login_button_stytle"
            android:layout_gravity="center"
            android:text="@string/btn_login"
            android:textColor="#ffffff"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <Button
                android:id="@+id/btn_register"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/login_register" 
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"/>
            
            <Button
                android:id="@+id/btn_question"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/login_question_style" />
        
        </RelativeLayout>
    
    </LinearLayout >
    
</FrameLayout>
